[package]
name = "temg-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# naia-bevy-server = { path = "../../../adapters/bevy/server", features = [ "transport_webrtc" ] }
bevy_app = { version = "0.10", default-features=false }
bevy_core = { version = "0.10", default-features=false }
bevy_ecs = { version = "0.10", default-features=false }
bevy_log = { version = "0.10", default-features=false }
naia-bevy-server = { version = "0.20.0", features = [ "transport_webrtc" ] }  
openssl = { version = "0.10", features = ["vendored"] }
temg-common = { path = "../temg-common" }